--- a/templates/landing/layouts/component/nav-menu.html
+++ b/templates/landing/layouts/component/nav-menu.html
@@ -13,5 +13,9 @@
             <div><i class="fa-solid fa-ranking-star"></i></div>
             <small>Skor</small>
         </a>
+        <a class="text-center text-decoration-none text-dark" href="/">
+            <div><i class="fa-solid fa-door-open"></i></div>
+            <small>Keluar</small>
+        </a>
     </div>
 </nav>
